Fix css alignment on event titles

--- a/public/stylesheets/emt.css
+++ b/public/stylesheets/emt.css
@@ -170,7 +170,7 @@ body { margin: 0; padding: 0; }
 
 .event .event_dates { color: gray; float: left; clear: left; height: 20px;}
 .event .event_links { float: left; color: red; font-size: 7pt; margin-left: 3px;}
-.event .event_title { float: left; clear: left; font-weight: bold; display: inline; }
+.event .event_title { float: left; clear: left; font-weight: bold; display: inline; margin-right: 5px;}
 .event .event_description { display: inline; }
 .event .event_interpretation { display: inline; }
 
